# rendering-ray-tracing

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.BA9983592E502BEF.idx
source/: camera.h  color.h  common.cpp  common.h  hit-record.h  hittable-list.h  hittable.h  interval.h  lambertian.h  main.cpp  material.h  point3.h  ray.h  sphere.h  vec3.cpp  vec3.h
